<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/chinese_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@mipmap/subject_back"
        app:title="@string/chinese"
        app:titleTextColor="#000"
        app:titleMarginStart="100dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#E2E2E2"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inner_strength_rank"
                    android:textColor="#000"
                    android:textSize="25sp"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/chinese_inner"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/outer_learning_rank"
                    android:textColor="#000"
                    android:textSize="25sp"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/chinese_outer"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="期末冲刺排行榜  >"
                    android:textColor="#000"
                    android:textSize="25sp"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/chinese_final"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/final_exam_rank"
                    android:textColor="#000"
                    android:textSize="25sp"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/chinese_exam"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>